springboot/springboot-orch/post/call-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: call-service
  namespace: springboot
spec:
  selector:
    app: call-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
