springboot/springboot-orch/post/target-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-service
  namespace: springboot
spec:
  selector:
    app: target-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
