springboot/springboot-orch/post/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-micro
  namespace: springboot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: springboot.micro.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: call-service
            port:
              number: 80
